# django_docker_container

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Readme_Environment.md  docker-compose.yml  main.py  project_structure.txt  pyproject.toml  requirements.txt
src/a_core/: settings.py  urls.py
src/a_home/: admin.py  models.py  views.py
src/a_home/migrations/: 0001_initial.py  0002_alter_homepagecontent_content.py  0003_alter_homepagecontent_content.py  0004_alter_homepagecontent_content.py  0005_alter_homepagecontent_content.py
src/a_users/: views.py
